--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-  background-color: #2c3e50;
+  background-color: #6200A6;
   color: white;
   padding: 20px;
   text-align: center;
