--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,7 @@ img {
 .race-section.right {
   justify-content: flex-end; /* push everything to the right */
 }
+
+.rounded {
+  border-radius: 10px;
+}
