--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ img {
 }
 
 .race-section img {
+  align-items: flex-start;
   max-width: 400px;     /* corrected px spacing */
   margin: 0 20px;       /* spacing around the image */
   border-radius: 10px;  /* rounded corners */
