--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ th, td {
     rgba(255,255,255,0.9) 15%,
     rgba(255,255,255,0.9) 85%,
     rgba(255,255,255,1) 100%);
+    border-radius: 20px;
     width: 100%;
     padding: 40px 0;
     text-align: center;
