--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,18 @@ th, td {
 .footer a:hover {
   transform: scale(1.15);
 }
+
+.video-container {
+  width: 400px;       /* whatever width you want */
+  height: 400px;      /* visible height (this crops vertically) */
+  overflow: hidden;   /* hides the extra parts */
+  position: relative;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: -100px;        /* shift video up to crop top part */
+  left: 0;
+  width: 100%;
+  height: 600px;      /* taller than container so you can shift */
+}
