--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,7 @@ th, td {
   height: 300px;      /* visible height (this crops vertically) */
   overflow: hidden;   /* hides the extra parts */
   position: relative;
+  text-align: center;
 }
 
 .video-container iframe {
@@ -143,5 +144,6 @@ th, td {
   top: -150px;        /* shift video up to crop top part */
   left: 0;
   width: 100%;
-  height: 600px;      /* taller than container so you can shift */
+  height: 400px;      /* taller than container so you can shift */
+  text-align: center;
 }
