--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-er/* Farby a štýly pre celú stránku */
+/* Farby a štýly pre celú stránku */
 body {
   background: url("images/background.jpg") no-repeat center top;
   background-size: cover;
