--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,6 @@ th, td {
 }
 
 .menu a:hover {
-  color: blue;              /* zmena farby pri prejdení myšou */
+  color: purple;              /* zmena farby pri prejdení myšou */
 }
 
