--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,14 @@ th, td {
   color: #6200A6;              /* zmena farby pri prejdení myšou */
 }
 
+.physical {
+  background-color: #f0f0f0;  /* šedá pre fyzické */
+}
+
+.elemental {
+  background-color: #ffe5b4; /* svetlo oranžová pre elementárne */
+}
+
+.magical {
+  background-color: #d0f0ff;   /* svetlo modrá pre magické */
+}
