--- a/styles.css
+++ b/styles.css
@@ -138,15 +138,15 @@ html {
 .menu {
   list-style: none;        /* odstráni bodky pred položkami */
   padding: 0;
-  margin: 0;
+  margin: 10px;
 }
 
 .menu li {
-  margin-bottom: 10px;     /* medzera medzi položkami */
+  margin-bottom: 15px;     /* medzera medzi položkami */
 }
 
 .menu a {
-  color: black;            /* farba textu */
+  color: blue;            /* farba textu */
   font-family: Arial, sans-serif; /* typ písma */
   font-size: 40px;         /* veľkosť písma */
   text-decoration: none;   /* odstráni podčiarknutie */
@@ -157,7 +157,7 @@ html {
   color: #FFFFFF;              /* zmena farby pri prejdení myšou */
   background-color: #6200A6;
   border-radius: 10px;       /* zaoblené rohy */
-  transition: all 0.3s;     /* hladký efekt */
+  transition: all 0.6s;     /* hladký efekt */
 }
 
 .physical {
