--- a/styles.css
+++ b/styles.css
@@ -146,9 +146,9 @@ html {
 }
 
 .menu a {
-  color: blue;            /* farba textu */
+  color: black;            /* farba textu */
   font-family: Arial, sans-serif; /* typ písma */
-  font-size: 40px;         /* veľkosť písma */
+  font-size: 30px;         /* veľkosť písma */
   text-decoration: none;   /* odstráni podčiarknutie */
   font-weight: bold;       /* hrubé písmo */
 }
@@ -157,7 +157,7 @@ html {
   color: #FFFFFF;              /* zmena farby pri prejdení myšou */
   background-color: #6200A6;
   border-radius: 10px;       /* zaoblené rohy */
-  transition: all 0.6s;     /* hladký efekt */
+  transition: all 0.4s;     /* hladký efekt */
 }
 
 .physical {
