--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,19 @@ html {
 .download-btn:hover {
   background-color: #555;
 }
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 pomer strán */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
