--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ html {
 
 .video-container {
   position: relative;
-  width: 100%;            /* full width */
+  width: 600px;
   padding-bottom: 56.25%; /* 16:9 aspect ratio */
   height: 0;
   overflow: hidden;
