--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ img {
   max-width: 100%;
   height: auto;
   border-radius: 10px; /* default rounded images */
-  box-shadow: 10px 10px 10px 12px rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .center {
