--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ img {
   max-width: 100%;
   height: auto;
   border-radius: 10px; /* default rounded images */
-  box-shadow: 4px 6px 16px rgba(0,0,0,0.2);
+  box-shadow: 10px 10px 20px 20px rgba(0, 0, 0, 0.2);
 }
 
 .center {
@@ -90,7 +90,7 @@ img {
   margin: 0 20px;       /* spacing around the image */
   border-radius: 10px;  /* rounded corners */
   flex-shrink: 0;
-  box-shadow: 2px 4px 12px rgba(0,0,0,0.2);
+  box-shadow: 10px 10px 20px 20px rgba(0, 0, 0, 0.2);
 }
 
 .race-text {
@@ -188,7 +188,7 @@ html {
   border-radius: 6px;
   font-weight: bold;
   transition: background-color 0.2s ease;
-  box-shadow: 2px 4px 12px rgba(0,0,0,0.2);
+  box-shadow: 10px 10px 20px 20px rgba(0, 0, 0, 0.2);
 }
 
 .download-btn:hover {
@@ -202,6 +202,7 @@ html {
   height: 0;
   overflow: hidden;
   margin: 0 auto;          /* center horizontally */
+  box-shadow: 10px 10px 20px 20px rgba(0, 0, 0, 0.2)
 }
 
 .video-container iframe {
