--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,9 @@ img {
 }
 
 img.no-shadow {
-  max-width: 100%;
-  height: auto;
+  all: unset;
+  width: 100;
+  height: 100;
   border-radius: 10px; /* default rounded images */
 }
 
