--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,8 @@ img {
 
 img.no-shadow {
   all: unset;
-  width: 100;
-  height: 100;
+  width: 100px;
+  height: auto;
   border-radius: 10px; /* default rounded images */
 }
 
