--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,11 @@ body {
 header {
   margin: auto;
   max-width: 1200px;
+  background: linear-gradient(
+    135deg,
+    black 0%,
+    #6200A6 100%
+  );
   background-color: #6200A6;
   color: white;
   padding: 20px;
