--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
 
 header {
   margin: auto;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
   max-width: 1200px;
   background: linear-gradient(
     135deg,
