--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,9 @@ header {
   border-radius: 10px;
 }
 
-/*nav {
+nav {
 //  transition: transform 0.3s ease;
-}*/
+}
 
 nav ul {
   list-style: none;
